fix layout issues

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Identity/IdentityHeader.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/Identity/IdentityHeader.razor.scss
@@ -1,5 +1,5 @@
 header {
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     position: absolute;
 }
